[package]
name = "aoc_2018"
version = "0.1.0"
authors = ["Nathan Wiebe Neufeldt <wn.nathan@gmail.com>"]

[dependencies]
regex = "1"

[[bin]]
name = "01a"
path = "src/01a.rs"

[[bin]]
name = "01b"
path = "src/01b.rs"

[[bin]]
name = "02a"
path = "src/02a.rs"

[[bin]]
name = "02b"
path = "src/02b.rs"

[[bin]]
name = "03a"
path = "src/03a.rs"

[[bin]]
name = "03b"
path = "src/03b.rs"

[[bin]]
name = "04a"
path = "src/04a.rs"

[[bin]]
name = "04b"
path = "src/04b.rs"

[[bin]]
name = "05a"
path = "src/05a.rs"

[[bin]]
name = "05b"
path = "src/05b.rs"

[[bin]]
name = "06a"
path = "src/06a.rs"

[[bin]]
name = "06b"
path = "src/06b.rs"

[[bin]]
name = "07a"
path = "src/07a.rs"

[[bin]]
name = "07b"
path = "src/07b.rs"
